<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magic Fingers</string>
    <string name="splash">splash</string>
    <string name="select">select</string>
    <string name="description">description</string>
    <string name="game">game</string>
    <string name="result">result</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">NOMBRE</string>
    <string name="name1">Susana</string>
    <string name="name2">Mónica</string>
    <string name="name3">Jessica</string>
    <string name="name4">Imma</string>
    <string name="name5">Ester</string>
    <string name="descripcio1">Diva donde las haya, Susana es conocida por su facilidad de llegar al orgasmo en repetidas ocasiones en un breve espacio de tiempo</string>
    <string name="descripcio2">Se trata de una autentica insaciable, Mónica conocida como la "Femme Fatale" va a poner a prueba tus habilidades y tu velocidad</string>
    <string name="descripcio3">Suave como la brisa marina, esta diosa del erotismo requerirá de toda tu dedicación para hacerla disfrutar</string>
    <string name="descripcio4">Desde tierras exóticas, ha llegado en busca de largas y duraderas experiencias, necesitaras toda tu delicadeza para conquistar a esta reina de la sensualidad</string>
    <string name="descripcio5">Des de las cimas del placer llega esta deidad que pondrá a prueba toda tu energía en el tiempo que dura una tormenta de verano</string>
    <string name="select_label">¿Serás capaz de satisfacerla?</string>
    <string name="result_label">Has obtenido un resultado de:</string>
    <string name="result_vaginner_label">VAGINNER</string>
    <string name="result_vaginner">Debes practicar mucho... aun no sabes como dar auténtico placer</string>
    <string name="result_vaginner_end">¡Sigue practicando campeón!</string>
    <string name="result_advance_label">ADVANCE</string>
    <string name="result_advance">Este es el camino del buen masturbador... Pero puedes mejorar</string>
    <string name="result_advance_end">¡Me ha gustado! Pero me puede gustar más</string>
    <string name="result_sexmachine_label">SEX MACHINE</string>
    <string name="result_sexmachine">¡¡Bien hecho!! Eres un auténtico aplicador de placer</string>
    <string name="result_sexmachine_end">¡Ouh yes! A buen masturbador, pocas palabras bastan</string>
    <string name="result_share">%1$s ha masturbado a %2$s \n y ha obtenido una puntuación \n de %3$s</string>
    <string name="preference">Ajustes</string>
    <string name="preferenceConfig">Configuración de usuario</string>
    <string name="preferenceName">Nombre de usuario</string>
    <string name="preferenceVolumen">Música</string>
    <string name="preferenceShowHowToPlay">Mostrar Ayuda</string>
    <string name="preferenceVibrate">Vibración</string>
    <string name="preferenceUpdates">Actualizaciones automáticas</string>
    <string name="preferenceLanguage">Idioma</string>
    <string name="preferenceLanguageChoose">Seleccionar</string>
    <string name="preferenceLanguageEs">Español</string>
    <string name="preferenceLanguageCa">Català</string>
    <string name="preferenceLanguageEn">English</string>
    <string name="preferenceMore">Mas Información</string>
    <string name="preferenceAbout">Acerca de</string>
    <string name="preferenceVersion">Versión</string>
    <string name="preferenceTermsOfUse">Terminos de uso</string>
    <string name="preferenceTermsOfUseSummary">Condiciones y seguridad</string>
    <string name="dialog_validate_name_title">¡¿Como te llamas?!</string>
    <string name="dialog_validate_name_message">Introduce tu nombre por favor, no tengas miedo :)</string>
    <string name="dialog_validate_name_message_short">¡Ui! Que nombre mas corto... Introduce tu nombre por favor, no tengas miedo :)</string>
    <string name="dialog_validate_name_message_not_vocals">No intentes engañar... Introduce tu nombre por favor, no tengas miedo :)</string>
    <string name="button_start">EMPEZAR</string>
    <string name="button_menu">MENÚ</string>
    <string name="button_share">SHARE</string>
    <string name="button_resart">RESTART</string>
    <string name="locked_label">BLOQUEADA</string>
    <string name="label_game_ok">Mmm.. Sigue así cariño</string>
    <string name="label_game_greater">Más suave papi</string>
    <string name="label_game_lower">¡¡Dame más!!</string>
    <string name="label_game_start">Tócame</string>
    <string name="BtnPlay">Play</string>
    <string name="BtnRmsAds">ADS</string>

</resources>