<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xoxoBackground"
    android:layoutAnimation="@anim/layout_animation_row_left_slide"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/ojos1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/name1"
        android:layout_gravity="center_horizontal"
        android:padding="2sp" />

    <ImageView
        android:id="@+id/ojos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/name2"
        android:layout_gravity="center_horizontal"
        android:padding="2sp" />

    <ImageView
        android:id="@+id/ojos3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/name3"
        android:layout_gravity="center_horizontal"
        android:padding="2sp" />

    <ImageView
        android:id="@+id/ojos4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/name4"
        android:layout_gravity="center_horizontal"
        android:padding="2sp" />

    <ImageView
        android:id="@+id/ojos5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/name5"
        android:layout_gravity="center_horizontal"
        android:padding="2sp" />

</LinearLayout>