<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutAnimation="@anim/layout_animation_row_left_slide"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >    
    
    <ImageView
        android:id="@+id/ojos1_puntuacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/name1"
        android:padding="2sp" />

    <ImageView
        android:id="@+id/ojos2_puntuacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/name2"
        android:padding="2sp" />

    <ImageView
        android:id="@+id/ojos3_puntuacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/name3"
        android:padding="2sp" />

    <ImageView
        android:id="@+id/ojos4_puntuacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/name4"
        android:padding="2sp" />

    <ImageView
        android:id="@+id/ojos5_puntuacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/name5"
        android:padding="2sp" />

</LinearLayout>